--- a/src/style-salas.css
+++ b/src/style-salas.css
@@ -2,19 +2,23 @@
     margin: 0;
     padding: 0;
 }
-
+@media screen {
 body {
     background-color: #f9f9f9; 
 }
 
-iframe{float: right;}
+iframe{
+    float: right;
+
+}
 .barra{
     background-color: #333;
     height: 300px;
     width: 300px;
     position: absolute;
     transition: all .2s linear;
-    }
+    overflow: row;   
+}
 
 nav{
     width: 100%;
@@ -40,3 +44,49 @@ nav a{
 .link:hover{
     background-color: #050542;   
 }
+}
+
+@media (max-width: 480px) {
+    body {
+        background-color: #f9f9f9; 
+    }
+    
+    iframe{
+    position: absolute;
+    top:100px;
+    height: 300px;
+    }
+    .barra{
+        background-color: #333;
+        height: auto;
+        width: 100%;
+        position: absolute;
+        transition: all .2s linear; 
+        top: 400px;  
+    }
+    
+    nav{
+        width: 100%;
+        position: absolute;
+        top: 60px;
+    }
+    
+    nav a{
+        text-decoration: none;
+    }
+    
+    .link{
+        background-color: #494950;
+        padding: 20px;
+        font-family:Arial, Helvetica, sans-serif ;
+        font-size: 12pt;
+        transition: all .2s linear;
+        color: #f4f4f9;
+        border-bottom: 2px solid #222;
+        
+    }
+    
+    .link:hover{
+        background-color: #050542;   
+    }
+    }
