--- a/src/style-salas.css
+++ b/src/style-salas.css
@@ -8,16 +8,29 @@ body {
 }
 
 iframe{
-    float: right;
-
+    position: absolute;
+    right: 0px;
+    top: 60px;
+    width: 1080px;
+    height: 720px;
+    margin-right: 15px;
 }
+.navegacao{
+    position: absolute;
+    background-color: #00BFFF;
+    width: 100%;
+    height: 60px;
+    top: 0px;
+}
+
+
 .barra{
     background-color: #333;
     height: 300px;
     width: 300px;
     position: absolute;
-    transition: all .2s linear;
-    overflow: row;   
+    transition: all .2s linear;  
+    top: 60px; 
 }
 
 nav{
