--- a/src/style-salas.css
+++ b/src/style-salas.css
@@ -29,6 +29,13 @@ h3{
     top: -21px;
     width: 200px;
 }
+#sair{
+    position: relative;
+    float: right; 
+    top: -63px;
+    width: 60px;
+    height: 60px;
+}
 
 #voltar {
     position: relative;
@@ -36,16 +43,15 @@ h3{
     top: -62px;
     width: 60px;
     height: 60px;
-    display: block;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 15pt;
-    color: #000;
 }
 #voltar img{
     width: 60px;
     height: 60px;
 }
-
+#sair img{
+    width: 60px;
+    height: 60px;
+}
 
 .barra{
     background-color: #333;
