--- a/src/style-salas.css
+++ b/src/style-salas.css
@@ -71,6 +71,15 @@ h3{
     transition: all .2s linear;  
     top: 60px; 
 }
+.barra-painel{
+    background-color: #333;
+    height: 200px;
+    width: 35%;
+    position: absolute;
+    transition: all .2s linear;  
+    top: 60px; 
+}
+
 .right-content{
     position: relative;
     right: -47px;
@@ -102,26 +111,41 @@ h3{
     top: -1px;
     width: 75%;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+a {
+    text-decoration: none;
+}
 @media (max-width: 480px) {
     body {
         background-color: #f9f9f9; 
     }  
     
+#voltar {
+    position: relative;
+    float: right; 
+    top: -69px;
+    width: 60px;
+    height: 60px;
+}
+}
+#sala-painel{
+    padding-top: 15px;
+    padding-left: 5px;
+    width: 50px;}
+#nome-painel{
+    position: relative;
+    left: 20%; 
+    top: -33px;
+    width: 200px;
+}
+#sair-painel{
+    position: relative;
+    float: right; 
+    top: -96px;
+    width: 60px;
+    height: 60px;
+}
+#sair-painel img{
+    width: 60px;
+    height: 60px;
+}
     }
